--- a/src/components/CartPage.module.css
+++ b/src/components/CartPage.module.css
@@ -17,6 +17,7 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+  align-items: center;
 }
 
 .btnShopNowContainer {
@@ -102,4 +103,17 @@
   justify-content: center;
   align-items: center;
   height: 500px;
+}
+
+.cartItemsAmount {
+  position: absolute;
+  top: 28px;
+  right: 15px;
+  width: 20px;
+  border: 2px solid red;
+  border-radius: 50%;
+  background-color: red;
+  color: white;
+  text-align: center;
+  font-size: 15px;
 }
