--- a/src/components/CartPage.module.css
+++ b/src/components/CartPage.module.css
@@ -105,7 +105,7 @@
   height: 500px;
 }
 
-.cartItemsAmount {
+/* .cartItemsAmount {
   position: absolute;
   top: 28px;
   right: 15px;
@@ -116,4 +116,4 @@
   color: white;
   text-align: center;
   font-size: 15px;
-}
+} */
