Decided to reuse ProductPage component with props in order to create the products cards from the API component later

--- a/src/components/ProductsPage.module.css
+++ b/src/components/ProductsPage.module.css
@@ -60,8 +60,14 @@ input {
   width: 50px;
   margin-bottom: 20px;
   text-align: center;
+  -moz-appearance: textfield;
 }
 
 .productPrice {
   margin-top: 10px;
+}
+
+.buttonIncrementQuantity,
+.buttonDecrementQuantity {
+  width: 25px;
 }
