--- a/src/components/CartPage.module.css
+++ b/src/components/CartPage.module.css
@@ -40,7 +40,7 @@
 }
 
 .productsCartContainer {
-  outline: 2px solid black;
+  /* outline: 2px solid black; */
   display: flex;
   justify-content: space-between;
   height: 50px;
@@ -68,10 +68,10 @@
 
 .productDescription {
   align-items: flex-end;
-  justify-content: space-between;
+  justify-content: space-around;
   display: flex;
   align-self: flex-end;
-  outline: 2px solid red;
+  /* outline: 2px solid red; */
 }
 
 .productQuantity {
@@ -109,4 +109,9 @@
   justify-content: center;
   align-items: center;
   height: 500px;
+}
+
+.buttonIncrementQuantity,
+.buttonDecrementQuantity {
+  width: 25px;
 }
