--- a/src/components/CartPage.module.css
+++ b/src/components/CartPage.module.css
@@ -61,7 +61,7 @@
 }
 
 .productImgContainer {
-  outline: 2px solid black;
+  /* outline: 2px solid black; */
   height: 100px;
   width: 100px;
 }
@@ -114,4 +114,8 @@
 .buttonIncrementQuantity,
 .buttonDecrementQuantity {
   width: 25px;
+}
+
+.productImg {
+  width: 75px;
 }
