Filtering by category has been implemented, with another state and using filter method.

--- a/src/components/AboutPage.module.css
+++ b/src/components/AboutPage.module.css
@@ -4,7 +4,8 @@
   display: flex;
   justify-content: center;
   /* align-items: center; */
-  margin-top: 40px;
+  /* margin-top: 40px; */
+  background-color: #8eb2c0;
 }
 
 .mainContent {
