--- a/src/style.css
+++ b/src/style.css
@@ -3,9 +3,9 @@
   top: 28px;
   right: 15px;
   width: 20px;
-  border: 2px solid red;
+  border: 2px solid #8eb2c0;
   border-radius: 50%;
-  background-color: red;
+  background-color: #8eb2c0;
   color: white;
   text-align: center;
   font-size: 15px;
