--- a/src/components/AboutPage.module.css
+++ b/src/components/AboutPage.module.css
@@ -3,7 +3,7 @@
   height: 120vh;
   display: flex;
   justify-content: center;
-  /* align-items: center; */
+  align-items: center;
   /* margin-top: 40px; */
   background-color: #8eb2c0;
 }
