--- a/src/components/CartPage.module.css
+++ b/src/components/CartPage.module.css
@@ -2,15 +2,17 @@
   display: flex;
   justify-content: center;
   height: 100vh;
+  background-color: #8eb2c0;
 }
 
 .emptyCartContent {
-  outline: 2px solid black;
+  /* outline: 2px solid black; */
   height: 500px;
   width: 700px;
   display: flex;
   justify-content: center;
   margin-top: 20px;
+  background-color: #f3f6f0;
 }
 
 .emptyCartSubContent {
@@ -18,6 +20,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  gap: 20px;
 }
 
 .btnShopNowContainer {
@@ -28,6 +31,15 @@
 .btnShopNow {
   margin-top: 20px;
   text-align: center;
+  background-color: #8a6460;
+  padding: 5px;
+  color: white;
+  border: 0;
+  border-radius: 2.5px;
+}
+
+.btnShopNow:hover {
+  cursor: pointer;
 }
 
 /* these styles above are used if the cart is empty */
@@ -37,6 +49,7 @@
   height: 100vh;
   display: flex;
   justify-content: space-between;
+  background-color: #8eb2c0;
 }
 
 .productsCartContainer {
@@ -58,6 +71,7 @@
   outline: 2px solid black;
   text-align: center;
   padding: 20px;
+  background-color: white;
 }
 
 .productImgContainer {
@@ -90,6 +104,7 @@
   margin-right: 20px;
   margin-top: 20px;
   flex-direction: column;
+  background-color: white;
 }
 
 .productCartSubWrapper {
@@ -102,6 +117,7 @@
 .estimatedTotal {
   display: flex;
   justify-content: space-between;
+  padding: 5px;
 }
 
 .btnPayContainer {
@@ -112,10 +128,24 @@
 }
 
 .buttonIncrementQuantity,
-.buttonDecrementQuantity {
-  width: 25px;
+.buttonDecrementQuantity,
+.removeButton,
+.proceedToCheckoutBtn {
+  /* width: 25px; */
+  padding: 2px 5px 2px 5px;
+  /* margin-top: 10px; */
+  background-color: #355360;
+  border: 0;
+  color: white;
 }
 
 .productImg {
   width: 75px;
+}
+
+.buttonDecrementQuantity:hover,
+.buttonIncrementQuantity:hover,
+.removeButton:hover,
+.proceedToCheckoutBtn:hover {
+  cursor: pointer;
 }
