Fixed the styling of the Nav to be responsive.

--- a/src/api/FetchProducts.module.css
+++ b/src/api/FetchProducts.module.css
@@ -8,3 +8,9 @@
   padding: 20px;
   background-color: #355360;
 }
+
+@media (max-width: 650px) {
+  .productsContainer {
+    padding-left: 0;
+  }
+}
