--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -43,3 +43,29 @@
 li {
   margin-top: 10px;
 }
+
+@media (max-width: 700px) {
+  .footerContent,
+  .locationContainer,
+  .phoneContainer,
+  .emailContainer,
+  .footerUsefulLinks .footerStoreImg,
+  .homeLink,
+  .productsLink,
+  .aboutLink,
+  .contactUs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
+
+  .footerStoreImg {
+    margin-top: 10px;
+  }
+
+  .contactUs {
+    margin-bottom: 10px;
+  }
+}
