Fixed Homepage styling and it is responsive.

--- a/src/components/HeaderProductsPage.module.css
+++ b/src/components/HeaderProductsPage.module.css
@@ -29,8 +29,8 @@ span {
 }
 
 p:nth-child(2) {
-  margin-left: 5px;
-  margin-right: 5px;
+  /* margin-left: 5px; */
+  /* margin-right: 5px; */
 }
 
 .mainContentHeader {
