--- a/src/components/Homepage.module.css
+++ b/src/components/Homepage.module.css
@@ -1,60 +1,81 @@
-.homePageImg {
-  max-height: 100vh;
-  width: 100%;
-  object-fit: fill;
-}
-
 .mainContainer {
+  max-width: 1300px;
+  margin: 0 auto;
   display: flex;
-  justify-content: center;
+  padding: 1.5em;
 }
 
-.mainContent {
-  z-index: 1;
-  display: flex;
-  justify-content: center;
-  position: absolute;
-  flex-direction: column;
-  color: white;
-  font-weight: bold;
-  margin-top: 5em;
+.mainContentSubContainerLeft {
+  padding: 3em 0em;
+  width: 50%;
+}
+
+.mainContentHeader {
+  font-size: 3rem;
+  width: 75%;
   text-align: center;
 }
 
-.buttonContainer {
+h2 .mainContentSpan {
+  font-size: 3rem;
+  margin-left: 0.8em;
+  display: block;
+}
+
+.mainContentDescription {
+  margin-top: 1em;
+}
+
+.mainContentThirdParagraph {
+  width: 90%;
+}
+
+.shoppingLinkContainer {
+  outline: 2px solid black;
+  display: inline-block;
+  margin-top: 2em;
+  padding: 1em 2em;
+  border-radius: 1em;
+  text-transform: uppercase;
+}
+
+.shoppingLinkContent {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  gap: 0.5em;
 }
 
-.buttonContainer {
-  margin-top: 50px;
-  padding: 5px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.shoppingArrow {
+  width: 15px;
 }
 
-.mainContentDesc {
-  margin-top: 20px;
+.mainContentSubContainerRight {
+  width: 50%;
 }
 
-.secondRow {
-  margin-top: 10px;
+.clothingStoreImg {
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
 }
 
-.shopNowBtn {
-  padding: 5px;
-  color: white;
-  background-color: #8a6460;
-  border: 0;
-  border-radius: 2px;
+@media screen and (max-width: 770px) {
+  .mainContainer {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .mainContentSubContainerLeft,
+  .mainContentSubContainerRight {
+    width: 100%;
+  }
+
+  .mainContentThirdParagraph {
+    width: 80%;
+  }
 }
 
-.shopNowBtn:hover {
-  border-bottom: 2px solid white;
-}
-
-.shopNowBtn:active {
-  transform: translateY(5px);
+@media screen and (max-width: 400px) {
+  .mainContentHeader {
+    width: 100%;
+  }
 }
