--- a/src/components/NavComponent.module.css
+++ b/src/components/NavComponent.module.css
@@ -1,17 +1,15 @@
 .headerContainer {
-  padding: 1em;
+  padding: 1.5em;
 }
 
 .navContent {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 80%;
-  margin: 0 auto;
 }
 
 .storeLogo {
-  width: 100px;
+  width: 80px;
   height: 50px;
   object-fit: cover;
 }
@@ -20,12 +18,24 @@
   width: 40px;
 }
 
+.amountOfProductsContainer {
+  position: relative;
+}
+
+.amountItemsInCart {
+  position: absolute;
+  top: 0%;
+  right: 0%;
+  width: 20px;
+  border: 2px solid #8eb2c0;
+  border-radius: 50%;
+  background-color: #8eb2c0;
+  color: white;
+  text-align: center;
+}
+
 @media screen and (max-width: 600px) {
   .headerContainer {
-    padding: 0 0.5em 0 0.5em;
-  }
-
-  .navContent {
-    width: 100%;
+    padding: 1.5em 0.5em;
   }
 }
