--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,71 +1,58 @@
 .footerContainer {
-  height: auto;
-  background-color: #f3f6f0;
-}
-
-.footerContent {
-  outline: 2px solid black;
+  max-width: 1300px;
+  margin: 0 auto;
+  /* outline: 2px solid black; */
+  padding: 4em;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
-.footerStoreImg {
-  max-height: 50px;
+.footerLogo {
+  max-width: 150px;
 }
 
-.footerSvgs {
-  width: 30px;
+.footerContentLeft p {
+  /* width: 30%; */
 }
 
-.footerUsefulLinks {
-  display: flex;
-  align-items: center;
-}
-
-.locationContainer,
-.phoneContainer,
-.emailContainer {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-}
-
-.socialNetworksContainer {
-  margin-top: 10px;
+.footerContentLeft {
+  width: 50%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  gap: 5px;
 }
 
-li {
-  margin-top: 10px;
+.footerContentRight {
+  display: flex;
+  gap: 1em;
 }
 
-@media (max-width: 700px) {
-  .footerContent,
-  .locationContainer,
-  .phoneContainer,
-  .emailContainer,
-  .footerUsefulLinks .footerStoreImg,
-  .homeLink,
-  .productsLink,
-  .aboutLink,
-  .contactUs {
+.footerRightColumnOne,
+.footerRightColumnTwo {
+  /* outline: 2px solid black; */
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+  /* width: 50%; */
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width: 770px) {
+  .footerContainer {
     display: flex;
     flex-direction: column;
+  }
+
+  .footerContentLeft {
+    margin-bottom: 1em;
+    width: 100%;
+  }
+
+  .footerContentRight {
+    display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
-  }
-
-  .footerStoreImg {
-    margin-top: 10px;
-  }
-
-  .contactUs {
-    margin-bottom: 10px;
   }
 }
