--- a/src/api/FetchProducts.module.css
+++ b/src/api/FetchProducts.module.css
@@ -1,6 +1,8 @@
 .productsContainer {
+  max-width: 1300px;
   outline: 2px solid black;
   display: grid;
+  margin: 0 auto;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   justify-content: center;
   align-items: center;
