--- a/src/components/AboutPage.module.css
+++ b/src/components/AboutPage.module.css
@@ -1,38 +1,23 @@
 .mainContainer {
-  /* outline: 2px solid black; */
-  height: 120vh;
+  max-width: 1300px;
+  margin: 0 auto;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* margin-top: 40px; */
-  background-color: #8eb2c0;
+  padding: 1.2em;
 }
 
-.mainContent {
-  /* outline: 2px solid black; */
+.mainContent p {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  font-size: 1.2rem;
   align-items: center;
+  line-height: 1.5;
 }
 
-.aboutImg {
-  height: 500px;
-  /* width: 400px;
-   */
-  width: 100%;
-  object-fit: contain;
-}
-
-@media (max-width: 546px) {
-  .mainContent {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-  }
-
-  p {
-    /* text-align: center; */
+@media screen and (max-width: 570px) {
+  .mainContent p {
+    text-align: center;
   }
 }
