--- a/src/components/Homepage.module.css
+++ b/src/components/Homepage.module.css
@@ -1,60 +1,66 @@
 .mainContainer {
-  max-width: 1300px;
+  max-width: var(--max-width);
   margin: 0 auto;
   display: flex;
-  padding: 1.5em;
+  padding: var(--nav-padding);
 }
 
-.mainContentSubContainerLeft {
-  padding: 3em 0em;
-  width: 50%;
+.mainContentLeft {
+  padding: var(--main-content-padding);
+  width: var(--main-content-width);
 }
 
 .mainContentHeader {
-  font-size: 3rem;
-  width: 75%;
+  font-size: var(--main-content-header-font-size);
+  width: var(--main-content-header-width);
   text-align: center;
 }
 
-h2 .mainContentSpan {
-  font-size: 3rem;
-  margin-left: 0.8em;
+.mainContentHeaderSpan:not(.mainContentHeader) {
+  font-weight: 400;
+}
+
+h2 .mainContentHeaderSpan {
+  font-size: var(--main-content-header-font-size);
+  margin-left: var(--main-content-span-margin-left);
   display: block;
 }
 
 .mainContentDescription {
-  margin-top: 1em;
+  margin-top: var(--main-content-description-margin-top);
 }
 
-.mainContentThirdParagraph {
-  width: 90%;
+.mainContentParagraph {
+  width: var(--main-content-paragraph-width);
 }
 
 .shoppingLinkContainer {
   outline: 2px solid black;
   display: inline-block;
-  margin-top: 2em;
-  padding: 1em 2em;
-  border-radius: 1em;
+  margin-top: var(--shopping-link-container-margin-top);
+  padding: var(--shopping-link-container-padding);
+  border-radius: var(--shopping-link-container-border-radius);
+  box-shadow: var(--shopping-link-container-box-shadow);
   text-transform: uppercase;
+  font-weight: var(--shopping-link-container-font-weigh);
 }
 
 .shoppingLinkContent {
   display: flex;
-  gap: 0.5em;
+  gap: var(--shopping-link-content-gap);
 }
 
-.shoppingArrow {
-  width: 15px;
+.shoppingArrowSVG {
+  width: var(--shopping-arrow-svg-width);
 }
 
-.mainContentSubContainerRight {
-  width: 50%;
+.mainContentRight {
+  width: var(--main-content-width);
 }
 
 .clothingStoreImg {
-  width: 100%;
-  height: 500px;
+  width: var(--clothing-store-image-width);
+  height: var(--clothing-store-image-height);
   object-fit: cover;
 }
 
@@ -64,18 +70,18 @@ h2 .mainContentSpan {
     flex-direction: column;
   }
 
-  .mainContentSubContainerLeft,
-  .mainContentSubContainerRight {
-    width: 100%;
+  .mainContentLeft,
+  .mainContentRight {
+    width: var(--clothing-store-image-width);
   }
 
-  .mainContentThirdParagraph {
-    width: 80%;
+  .mainContentParagraph {
+    width: var(--main-content-paragraph-width);
   }
 }
 
 @media screen and (max-width: 400px) {
   .mainContentHeader {
-    width: 100%;
+    width: var(--clothing-store-image-width);
   }
 }
