--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Rubik";
+  src: url("./public/fonts/Rubik-Black.ttf") format("ttf");
+}
+
 :root {
   --max-width: 1300px;
   --height: 100vh;
